# web-api-axum-ddd

./: .gitignore  Cargo.toml  README.md  environment.sh  migrate.sql
html/: index.html
src/: commons.rs  handlers.rs  lib.rs  main.rs  repositories.rs  use_cases.rs
src/commons/: config.rs  setup.rs  types.rs
src/handlers/: auth.rs  content.rs
src/middlewares/: auth.rs
src/models/: dtos.rs
src/models/dtos/: auth.rs  content.rs  member.rs
src/models/entities/: auth.rs  content.rs  member.rs
src/repositories/implementations/: auth.rs  content.rs  member.rs
src/repositories/interfaces/: auth.rs  content.rs  member.rs
src/use_cases/: auth.rs  content.rs
