[package]
name = "web-api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { version = "0.1.88", default-features = false }
axum = "0.8.3"
axum-extra = { version = "0.10.1", default-features = false, features = ["typed-header"] }
chrono = { version = "0.4.40", default-features = false, features = ["serde", "now"] }
derive-new = { version = "0.7.0", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false, features = ["std"] }
tokio = { version = "1.44.1", default-features = false, features = ["macros", "rt-multi-thread"] }
simple-jwt = { git = "https://github.com/2bitcpu/simple-jwt" }
async-argon2 = { git = "https://github.com/2bitcpu/async-argon2" }

# sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio-native-tls", "chrono", "derive", "migrate", "sqlite-unbundled"] }

#sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio-native-tls", "chrono", "derive", "migrate", "sqlite"] }
sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio-rustls", "chrono", "derive", "migrate", "sqlite"] }
libsqlite3-sys = { version = "^0.30.1", features = ["bundled"], default-features = false }

[profile.release]
opt-level = "z"
debug = false
lto = true
strip = true
codegen-units = 1
panic = "abort"

# cargo +nightly-2025-03-18 build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target aarch64-unknown-linux-gnu --release
# upx --best --lzma ./target/aarch64-unknown-linux-gnu/release/web-api
